<resources>
    <string name="app_name">Daak Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_international">International</string>
    <string name="text_domestic">Domestic</string>
    <string name="input_title">Title (optional)</string>
    <string name="tracking_id">Tracking Id</string>
    <string name="add">Add</string>
    <string name="parcels">Parcels</string>
    <string name="settings">Settings</string>
    <string name="cancel_">"    Cancel"</string>
    <string name="delete_">"    Delete"</string>
    <string name="restore_">"    Restore"</string>
    <string name="archive_">"    Archive"</string>
    <string name="rename_">"    Rename"</string>
    <string name="update_">"    Update"</string>
    <string name="network_request_failed">Network request failed</string>
    <string name="tracking">Tracking....</string>
    <string name="looks_like_you_copied_the_tracking_number">Looks like you copied the tracking number</string>
    <string name="close">Close</string>
    <string name="tracking_can_not_be_empty">Tracking id can\'t be empty</string>
    <string name="valid_tracking_id_length_is_13">A valid tracking id length is 13</string>
    <string name="tracking_id_format">"Tracking id formate is invalid "</string>
    <string name="exist">Tracking id exist</string>
    <string name="no_information_about_this_parcel">No Information on the status of the parcel yet</string>
    <string name="archived_successfully">"Archived successfully "</string>
    <string name="deleted">successfully deleted</string>
    <string name="renamed_successfully">Renamed successfully</string>
    <string name="restored_successfully">Restored successfully</string>
    <string name="are_you_sure_you_want_to_deleted">"Are you sure you want to delete "</string>
    <string name="fragment_home">Parcels</string>
    <string name="fragment_settings">Settings</string>
</resources>