<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.options.ParcelOptionsFragment">


    <ImageView
        android:id="@+id/bottomSheetTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_bottom_sheet_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tracking_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomSheetTop" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracking_id">


        <LinearLayout
            android:id="@+id/activeSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_refresh"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/update_"
                android:textAlignment="textStart"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/rename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_edit"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/rename_"
                android:textAlignment="textStart"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/archive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_archive"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/archive_"
                android:textAlignment="textStart"
                android:textAllCaps="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/archiveSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/restore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_restore"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/restore_"
                android:textAlignment="textStart"
                android:textAllCaps="false"/>

        </LinearLayout>

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_box_remove"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/delete_"
            android:textAlignment="textStart"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_close_square"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/cancel_"
            android:textAlignment="textStart"
            android:textAllCaps="false" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>